src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_multicharacter_operator_double_pipe.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        Integer(
            1,
        ),
        DoublePipe,
        Integer(
            0,
        ),
    ],
)
