src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_multicharacter_operator_greater_than.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        Integer(
            1,
        ),
        GreaterThan,
        Integer(
            0,
        ),
    ],
)
