src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_multicharacter_operator_greater_than_equal.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        Integer(
            1,
        ),
        GreaterThanEquals,
        Integer(
            0,
        ),
    ],
)
