src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_multicharacter_operator_many.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        Integer(
            1,
        ),
        DoublePipe,
        Integer(
            0,
        ),
        DoubleAmpersand,
        Integer(
            2,
        ),
        Semicolon,
    ],
)
