src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_addition.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        Integer(
            1,
        ),
        Plus,
        Integer(
            3,
        ),
        Semicolon,
    ],
)
