src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_bitwise_complement.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        BitwiseComplement,
        Integer(
            2,
        ),
        Semicolon,
    ],
)
